fix(input-field): make a placeholder text visible in dark mode

--- a/src/components/input-field/input-field.scss
+++ b/src/components/input-field/input-field.scss
@@ -35,6 +35,7 @@
         height: var(--textarea-height, 100%);
 
         .mdc-text-field__input {
+            @include shared_input-select-picker.input-field-placeholder;
             margin-top: functions.pxToRem(8);
             margin-bottom: 0;
         }
