--- a/src/style/internal/shared_input-select-picker.scss
+++ b/src/style/internal/shared_input-select-picker.scss
@@ -21,6 +21,7 @@ $label-color: rgba(var(--contrast-1200), 1);
 $label-color-disabled: rgba(var(--contrast-1200), 0.5);
 $input-text-color: rgba(var(--contrast-1400), 1);
 $input-text-leading-icon-color: rgb(var(--contrast-900));
+$input-placeholder-color: $input-text-leading-icon-color;
 
 $input-text-color-disabled: rgba(var(--contrast-1400), 0.5);
 $helper-text-color: $label-color;
@@ -85,7 +86,7 @@ $cropped-label-hack--font-size: 0.875rem; //14px
 
 @mixin input-field-placeholder {
     &::placeholder {
-        color: rgb(var(--contrast-900)) !important;
+        color: $input-placeholder-color !important;
     }
 }
 
